--- a/doc/USER_MANUAL/03_mesh_generation.tex
+++ b/doc/USER_MANUAL/03_mesh_generation.tex
@@ -40,8 +40,7 @@ number of cores.
 \end{description}
 Examples are provided in the SPECFEM3D Cartesian package in the subdirectory
 \texttt{EXAMPLES/}. We strongly encourage you to contribute your own
-example to this package by contacting the CIG Computational Seismology
-Mailing List \urlwithparentheses{cig-seismo@geodynamics.org}.
+example to this package through the github repository!
 
 
 \subsection{Creating the Mesh with CUBIT}
@@ -83,8 +82,7 @@ layered halfspace (bottom-left) and tomographic model (bottom-right).}
 
 In each example subdirectory you will find a \texttt{README} file,
 which explains in a step-by-step tutorial the workflow for the example.
-Please feel free to contribute your own example to this package by
-contacting the CIG Computational Seismology Mailing List \urlwithparentheses{cig-seismo@geodynamics.org}.\\
+Please feel free to contribute your own example to this package through the github repository!
 
 In some cases, to re-create the meshes for the examples given, just type
 \begin{verbatim}
