--- a/doc/USER_MANUAL/15_informations_for_developers.tex
+++ b/doc/USER_MANUAL/15_informations_for_developers.tex
@@ -3,7 +3,7 @@
 
 You can get a very simple 1D version of a demo code (there is one in Fortran and one in Python):
 \begin{verbatim}
-git clone --recursive https://github.com/geodynamics/specfem1d.git
+git clone --recursive https://github.com/SPECFEM/specfem1d.git
 \end{verbatim}
 
 \noindent We also have simple 3D demo source codes that implement the SEM in a single, small program, in directory\\
@@ -14,6 +14,6 @@ We also have a similar, even simpler, demo source code for the 2D case in direct
 utils/small\_SEM\_solver\_in\_Fortran\_without\_MPI\_to\_learn of the specfem2d package.\\
 
 \noindent For information on how to contribute to the code, i.e., for how to make your modifications, additions or improvements part of the
-official package, see \url{https://github.com/geodynamics/specfem3d/wiki} .
+official package, see \url{https://github.com/SPECFEM/specfem3d/wiki} .
 
 
