--- a/doc/USER_MANUAL/notes_and_acknowledgement.tex
+++ b/doc/USER_MANUAL/notes_and_acknowledgement.tex
@@ -21,6 +21,5 @@ based on IBM Data Explorer, AVS \urlwithparentheses{http://www.avs.com}
 is a trademark of Advanced Visualization Systems, and ParaView \urlwithparentheses{http://www.paraview.org}
 is an open-source visualization platform.\\
 
-Please e-mail your feedback, questions, comments, and suggestions
-to the CIG Computational Seismology Mailing List \urlwithparentheses{cig-seismo@geodynamics.org}.
+Please provide your feedback, questions, comments, and suggestions through the github repository.
 
